# prosody-rb

./: .gitignore  .standard.yml  .taplo.toml  ARCHITECTURE.md  Architecture.md  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  Rakefile  docker-compose.yaml  errors.txt  prosody.gemspec  release-please-config.json
.cargo/: config.toml
.github/workflows/: general.yaml  main.yml  pr.yaml  quality.yaml  release.yaml
ext/prosody/: Cargo.toml  extconf.rb
ext/prosody/src/: admin.rs  bridge.rs  gvl.rs  handler.rs  lib.rs  logging.rs  result.rs  tracing_util.rs  util.rs
ext/prosody/src/bridge/: bidirectional.rs  callback.rs  core.rs  mod.rs
ext/prosody/src/client/: config.rs  mod.rs
ext/prosody/src/handler/: context.rs  message.rs  mod.rs  trigger.rs
ext/prosody/src/scheduler/: cancellation.rs  handle.rs  mod.rs  processor.rs  result.rs
lib/: prosody.rb
lib/prosody/: configuration.rb  handler.rb  native_stubs.rb  processor.rb  sentry.rb  version.rb
sig/: configuration.rbs  handler.rbs  processor.rbs  prosody.rbs  version.rbs
spec/: client_init_spec.rb  client_spec.rb  configuration_spec.rb  handler_spec.rb  logger_spec.rb  processor_spec.rb  prosody_spec.rb  sentry_spec.rb  spec_helper.rb  tracing_integration_spec.rb
spec/support/: sentry.rb  test_config.rb
