# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/prosody"]
resolver = "2"

[workspace.dependencies]
magnus = { version = "0.7", default-features = false }
educe = "0.6"
prosody = { git = "https://github.com/cincpro/prosody.git", rev = "4bd2f3ef500bc8a4cb16102b3d24a5553ea299ec", default-features = false } # replace once we have a package manager
tokio = "1.44"
futures = "0.3"
thiserror = "2.0"
rb-sys = "0.9"
tracing = "0.1"
serde_magnus = "0.9"
atomic-take = "1.1"
serde = "1.0"
serde-untagged = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "allow"

[workspace.lints.clippy]
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"