[package]
name = "prosody"
version = "0.1.0"
edition = "2024"
authors = ["Joshua Griffith <Joshua.Griffith@fnf.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { workspace = true, default-features = false }
educe.workspace = true
prosody.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
futures.workspace = true
thiserror.workspace = true
rb-sys.workspace = true
tracing.workspace = true
serde_magnus.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
parking_lot.workspace = true
either = { workspace = true, features = ["serde"] }
atomic-take.workspace = true

[lints]
workspace = true
