[package]
authors = ["Joshua Griffith <Joshua.Griffith@fnf.com>"]
edition = "2024"
name = "prosody"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic-take.workspace = true
bumpalo = { workspace = true, features = ["collections"] }
educe.workspace = true
futures.workspace = true
magnus = { workspace = true, default-features = false }
opentelemetry.workspace = true
prosody = { workspace = true }
rb-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-untagged.workspace = true
serde_magnus.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true


[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { workspace = true, features = [
    "disable_initial_exec_tls",
] }


[lints]
workspace = true
